# NapiAddon

./: .gitignore  CMakeJS.cmake  CMakeLists.txt  NapiAddon.cmake  README.md  index.js  package.json  tsconfig.json
.github/workflows/: node.yaml  test.yaml
lib/: addon.node.js  addon.node.ts
share/cmake/Modules/: ExportNapiAddon.cmake
src/demo/: addon.cpp
test/: hello.js  hello_v7.js  index.js  tests.cmake  version.js  version_v7.js
